[gd_scene load_steps=9 format=2]

[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scripts/Room.gd" type="Script" id=1]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scenes/EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/sign.png" type="Texture" id=4]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Fonts/BoardText.tres" type="DynamicFont" id=5]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scripts/Issue.gd" type="Script" id=6]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/ProblemIcons/DokumentLokal.png" type="Texture" id=7]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scenes/Door.tscn" type="PackedScene" id=8]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemySpawner" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 138, 550 )
scale = Vector2( 3, 3 )

[node name="Signboard" type="Sprite" parent="."]
position = Vector2( 640, 100 )
texture = ExtResource( 4 )

[node name="Issue" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Problem" type="Label" parent="Issue"]
margin_left = 153.0
margin_top = 70.0
margin_right = 1130.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 5 )
text = "BLA BLA BLA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProblemSprite" type="Sprite" parent="Issue"]
visible = false
position = Vector2( 640, 380 )
texture = ExtResource( 7 )

[node name="SolutionSprite" type="Sprite" parent="Issue"]
visible = false
position = Vector2( 640, 380 )
texture = ExtResource( 7 )

[node name="Door" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 68.9196, 88.3998 )
